# nrg_interview_prep

./: .gitignore  launch_question2_app.sh  readme.md  setup.cfg
.devcontainer/: devcontainer.json
data/: height_model.pkl  project_questions.md  survival_data.csv  survival_model.pkl  survival_model_stats.json
notebooks/: question_2.ipynb  question_3.ipynb
nrg_interview_prep/: __main__.py  config.py  log_odds.py  marginal_height_gain_app.py  survival_model.py  utils.py
