[metadata]
name = nrg-interview-prep
version = 0.0.1
author = Glen Hanson
author_email = glen.s.hanson@gmail.com
description = A package for a pre-interview project

[options]
packages = find:
install_requires = 
    fire
    numpy
    pandas
    matplotlib
    seaborn
    torch
    scikit-learn
    statsmodels


[options.extras_require]
dev = 
    black
    isort
    pylint
    pytest
    ipython
    ipykernel

[options.entry_points]
console_scripts =
    nrg = nrg_interview_prep.__main__:main

[pylint.FORMAT]
disable = all
enable = unused-import